# python-projects

./: .gitignore  README.md  apa.txt  bajs.txt  git-tips-and-tricks.txt  newfile.txt
C++/: .clang10  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  TheProject  TheProject.srctrldb  TheProject.srctrlprj  cmake.sh  cmake_install.cmake  compile_commands.json  install_manifest.txt
C++/include/: TheProject.h  TheProject.h.in
C++/src/: AbstractFactory.cpp  BeeAndFlowers.cpp  BeeAndFlowers.cpp~  Bicycle.cpp  BuildBicycles.cpp  CMakeCache.txt  CMakeLists.txt  CuriousSingleton.cpp  FunctionStaticSingleton.cpp  InnerClassIdiom.cpp  Makefile  ObservedFlower.cpp  PaperScissorsRock.cpp  ShapeFactory1.cpp  ShapeFactory2.cpp  SingletonPattern.cpp  SingletonPattern2.cpp  TheProject.cpp  UseLog2.cpp  VirtualConstructor.cpp  cmake_install.cmake
Easy512/: användssedan2014.e60  användssedan2014_kommenterad.e60  lathund.docx  nytt4.e60  t.txt  txt.txt  working_butwillendlesslytryifbottenskruvnotactivated.e60
Mitsubishi/: IWABO 50kW V.vls  IWABO 50kW V_350_EO4_PLUS_PLUS2.vls  IWABO 50kW V_400_EO4_PLUS.vls  IWABO 50kW V_400_EO4_PLUS_PLUS.vls  Mitsubishi.pptx  Readme.txt
Pelletwatcher/: TheWatcher.py  TheWatcher_2.py  testGPIO.py
Salesforce/: console_threads_email.py  setup.txt
spyder/: demo.py  my_thinkDSP.py
srt/: sallskapsresan [EN].srt  sallskapsresan [HU].srt
